Refactor footer and navbar components, update image paths, and modify about-config for tool changes

--- a/src/content/about/about-config.json
+++ b/src/content/about/about-config.json
@@ -70,7 +70,7 @@
         },
         {
             "title": "DevOps & Automation",
-            "tools": ["Docker", "Kubernetes", "Git", "n8n", "Zapier"]
+            "tools": ["Docker", "CI/CD Pipelines", "n8n", "Zapier"]
         },
         {
             "title": "Methodologies & Design",
